minitrace-macro/tests/trace/ui/err/009-optional-is-known-str.rs
use minitrace::trace;

#[trace(name = "a", "enter_on_poll" = true)]
fn f() {}

fn main() {
    f();
}
